[package]
name = "pam_tester"
version = "0.1.0"
edition = "2021"
authors = [
    "William Brown <william@blackhats.net.au>",
    ]
rust-version = "1.64"
license = "MPL-2.0"
homepage = "https://github.com/kanidm/pam_tester/"
repository = "https://github.com/kanidm/pam_tester/"

[dependencies]
clap = { version = "^3.2", features = ["derive"] }
pam = "^0.7.0"
rpassword = "^7.1.0"
tracing = { version = "^0.1.37", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = { version = "^0.3.16", features = ["env-filter", "fmt"] }
